<resources>
    <string name="app_name">CalorieCalculator</string>
    <string name="login">Your Name.......</string>
    <string name="loginQuestion">No accaunt yet? Create one.</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="name">User Name</string>
    <string name="login_form">Login Form</string>
    <string name="your_name">Your name...</string>
    <string name="age">Your age...</string>
    <string name="weight">Your weight...</string>
    <string name="height">Your height...</string>
    <string name="goal">Your goal</string>
    <string name="registration">Register</string>
    <string name="myName">Cobzin Serghei</string>
    <string name="diplomProject">Diplom Project TI - 124</string>

    <string name="diary">Calories blog</string>
    <string name="list_products">List of products</string>
    <string name="calculations">Calculations</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="helpful_information">Helpful information</string>

    <string-array name="goals">
        <item>Weight loss</item>
        <item>Weight set</item>
        <item>Saving weight</item>
    </string-array>

    <string-array name="life_style">
        <item>Passive</item>
        <item>Little Activity</item>
        <item>Middle Activity </item>
        <item>High Activity </item>
        <item>Very High Activity </item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Edit profile proprities</string>
    <string name="your_name_main">Your Name</string>
    <string name="your_age_main">Your age</string>
    <string name="your_height_main">Your height</string>
    <string name="your_weight_main">Your weight</string>
    <string name="your_goal">Goal:</string>
    <string name="your_style">Style:</string>
    <string name="current_calories">Current calories</string>
    <string name="current_date">Current date:</string>
    <string name="product_name">Product Name</string>
    <string name="priduct_name">Product\'s name...</string>
    <string name="add_to_diary">Add to diary</string>
    <string name="day_results">Day Results:</string>
    <string name="time">Time:</string>
    <string name="nameP">Name:</string>
    <string name="cal">Calories:</string>
    <string name="proteins">Proteins/Fats/С-hydrat:</string>
    <string name="normal_calories">Normal calories</string>
    <string name="change_proprities">Edit your proprities</string>
    <string name="save_prop_q">Save new proprities?</string>
    <string name="yes">Yes</string>
    <string name="nn">Your new name...</string>
    <string name="na">Your new age...</string>
    <string name="nh">Your new height...</string>
    <string name="nw">Your new weight...</string>
    <string name="ng">Your new goal:</string>
    <string name="ns">Your new style:</string>
    <string name="products_weight">Products weight(gramm)</string>
    <string name="reg">Register account?</string>
    <string name="reg2">Calculate?</string>
    <string name="product_weight">Products weight</string>
    <string name="your_password">Your password...</string>
    <string name="you_reg_your_account">You registered accaunt!</string>
    <string name="normal_calories_L">Normal calories</string>
    <string name="search_the_product">Search the product</string>
    <string name="diaryLabel">Diary</string>

</resources>
