<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.main.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <ImageView
        android:src="@drawable/profile_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:drawableLeft="@drawable/ic_rename_box_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="27dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_name_main"
        android:id="@+id/newName"
        android:paddingTop="10dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_age_main"
        android:id="@+id/newAge"
        android:drawableLeft="@drawable/ic_image_filter_vintage_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="27dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/newName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_height_main"
        android:id="@+id/newHeight"
        android:drawableLeft="@drawable/ic_human_greeting_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="27dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/newAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_weight_main"
        android:id="@+id/newWeight"
        android:drawableLeft="@drawable/ic_human_child_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="27dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/newHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_goal"
        android:id="@+id/textViewLogedUserGoal"
        android:drawableLeft="@drawable/ic_google_glass_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="27dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/newWeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_style"
        android:id="@+id/textViewLogedUserLifeStyle"
        android:drawableLeft="@drawable/ic_bike_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="27dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/textViewLogedUserGoal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/normal_calories_L"
        android:id="@+id/textViewLogedUserNormalCalories"
        android:drawableLeft="@drawable/ic_scale_balance_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="27dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/textViewLogedUserLifeStyle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/current_calories"
        android:id="@+id/textViewLogedUserCturrentCallories"
        android:drawableLeft="@drawable/ic_scale_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="27dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/textViewLogedUserNormalCalories"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
