<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.main.EditUser">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/change_proprities"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textViewEditYourPropreties"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etEditName"
        android:layout_below="@+id/textViewEditYourPropreties"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableTint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_account_settings_grey600_24dp"
        android:hint="@string/your_name"
        android:textColorHint="@color/colorPrimary"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etEditAge"
        android:layout_below="@+id/etEditName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableTint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_image_filter_vintage_grey600_24dp"
        android:hint="@string/age"
        android:textColorHint="@color/colorPrimary"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etEditHeight"
        android:layout_below="@+id/etEditAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableTint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_human_greeting_grey600_24dp"
        android:hint="@string/height"
        android:textColorHint="@color/colorPrimary"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etEditWeight"
        android:layout_below="@+id/etEditHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableTint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_human_child_grey600_24dp"
        android:hint="@string/weight"
        android:textColorHint="@color/colorPrimary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_goal"
        android:drawableTint="@color/colorPrimary"
        android:textSize="20dp"
        android:id="@+id/textView100"
        android:drawableLeft="@drawable/ic_google_glass_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:layout_below="@+id/etEditWeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerEditGoal"
        android:layout_below="@+id/etEditWeight"
        android:layout_toRightOf="@+id/textView100"
        android:layout_toEndOf="@+id/textView100"
        android:paddingLeft="12dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_goal"
        android:drawableTint="@color/colorPrimary"
        android:textSize="20dp"
        android:id="@+id/textView200"
        android:drawableLeft="@drawable/ic_bike_grey600_24dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:layout_below="@+id/spinnerEditGoal"
        android:layout_alignParentLeft="true"
        android:paddingTop="15dp"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerEditLifeStyle"
        android:layout_below="@+id/spinnerEditGoal"
        android:layout_toRightOf="@+id/textView200"
        android:layout_toEndOf="@+id/textView200"
        android:paddingLeft="12dp"
        android:paddingTop="15dp"
        />


    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fabEditUserPropButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_plus"
        fab:fab_colorNormal="@color/colorPrimary"
        fab:fab_colorPressed="@color/colorPrimaryDark"
        android:paddingLeft="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
